src/test/resources/frontendReference/invalid/semanticErr/expressions/exprTypeErr.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 12:10 -- Incompatible type at 15+6||19 (expected: INT, actual: BOOL)
